sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/IfTypeGuardStatement.sand
pub class IfTypeGuardStatement {
    emptyNullGuard() {
        if let a = b {

        }

        if let a = b {

        } else if cond {
            
        }

        if let a = b {

        } else if cond {

        } else {

        }
    }

    emptyInstanceofGuard() {
        if let a: Foo = b {

        }

        if let a: Foo = b {

        } else if cond {
            
        }

        if let a: Foo = b {

        } else if cond {

        } else {

        }
    }

    emptyMultipleGuards() {
        if let a = b, a: Foo = b {
            foo();
        }

        if let a = b, a: Foo = b {
            foo();
        } else if cond {
            foo();
        }

        if let a = b, a: Foo = b {
            foo();
        } else if cond {
            foo();
        } else {
            foo();
        }

        if let a: Foo = b, a: Foo = b {
            foo();
        }

        if let a = b, a = b {
            foo();
        }

        if let a: Foo = b, a: Foo = b {
            foo();
        }
    }

    nonEmptyNullGuard() {
        if let a = b {
            foo();
        }

        if let a = b {
            foo();
        } else if cond {
            foo();
        }

        if let a = b {
            foo();
        } else if cond {
            foo();
        } else {
            foo();
        }
    }

    nonEmptyInstanceofGuard() {
        if let a: Foo = b {
            foo();
        }

        if let a: Foo = b {
            foo();
        } else if cond {
            foo();
        }

        if let a: Foo = b {
            foo();
        } else if cond {
            foo();
        } else {
            foo();
        }
    }

    nonEmptyMultipleGuards() {
        if let a = b, a: Foo = b {
            foo();
        }

        if let a = b, a: Foo = b {
            foo();
        } else if cond {
            foo();
        }

        if let a = b, a: Foo = b {
            foo();
        } else if cond {
            foo();
        } else {
            foo();
        }

        if let a: Foo = b, a: Foo = b {
            foo();
        }

        if let a = b, a = b {
            foo();
        }

        if let a: Foo = b, a: Foo = b {
            foo();
        }
    }

    multipleGuardsTrailingComma() {
        if let a = b, a = b, {

        }

        if let a = b, a = b, {
            foo();
        }
    }
}