sandc/test/fixtures/astRegression/shouldFail/productions/ifInlineTypeGuard/InlineInstanceof.sand
pub class InlineInstanceof {
    foo() {
        (
            if let inline a: Foo = b() {
                c()
            } else {
                c()
            }
        )
    }
}